:bug: Fix: Fix vertical alignment of the last div in the Home Page's Main

--- a/styles/mdhl_3.css
+++ b/styles/mdhl_3.css
@@ -104,7 +104,9 @@ main section{
 main section article{
     width: 28%;
     color: #000;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 0.3rem 0;
     background-color: var(--celeste);
     border-radius: 2rem;
@@ -133,7 +135,6 @@ main section article span{
     border-radius: 2rem;
     position: absolute;
     top: 94%;
-    right: 15%;
 }
 
 /* ##### ABOUT ##### */
